2004/07/07 21:08 (+0200) kaffeetisch

	A t/PangoTypes.t
	A xs/PangoTypes.xs
	* MANIFEST
	* gtk2perl.h
	* xs_files-2.0: Bind and test stuff from pango-types.h, including
	PangoMatrix.

	* MANIFEST
	* Makefile.PL
	* maps-2.0
	* maps_pango-1.0
	* maps_pango-1.5: Use separate maps files for pango.

	* t/PangoContext.t
	* xs/PangoContext.xs: Bind and test [gs]et_matrix.

2004/06/28 01:08 (-0400) muppetman

	* Gtk2.pm, README, NEWS: unstable development release 1.051

	* gtk2perl.h: protect custom GTypes with #ifndefs, to avoid
	redefining symbols that are provided upstream in different versions.

2004/06/22 20:19 (-0400) rwmcfa1

	* examples/thread_usage.pl: now that we can truely support threads
	there might as well an example of how to use the ability. this one
	replaces the old how to work around the fact that threads aren't
	supported which is no longer relavant.

2004/06/14 19:32 (+0200) kaffeetisch

	* xs/GtkFileFilter.xs: Fix erroneous initialization.

2004/06/13 11:36 (-0400) muppetman

	* xs/GdkKeys.xs: adapt docs for get_entries_for_keyval() from the C
	api reference.

2004/06/04 13:52 (-0400) rwmcfa1

	* Gtk2.pm: added a -threads-init option to import, added doc on -init
	and -threads-init. 

	* TODO: removed an outdated todo (example programs, they already can be)
	and removed the above addressed TODO.

2004/06/08 21:39 (-0400) muppetman

	* TODO: updated.

2004/06/04 13:52 (-0400) muppetman

	* AUTHORS, xs/GdkEvent.xs, xs/GdkWindow.xs, xs/Gtk2.xs,
	xs/GtkAccelMap.xs, xs/GtkCellLayout.xs, xs/GtkCellRenderer.xs,
	xs/GtkClipboard.xs, xs/GtkContainer.xs, xs/GtkEntryCompletion.xs,
	xs/GtkFileFilter.xs, xs/GtkItemFactory.xs, xs/GtkMenu.xs,
	xs/GtkTextTagTable.xs, xs/GtkTreeModel.xs, xs/GtkTreeModelFilter.xs,
	xs/GtkTreeSelection.xs, xs/GtkTreeSortable.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs, xs/PangoFontset.xs: patch from Albert Chin
	removes non-static initializers so that we are compatible with