@@ -1,3 +1,11 @@
+2004/07/07 22:23 (-0400) muppetman
+
+	* examples/cellrenderer-popup.pl: fix a bug in the menu-positioning
+	code, which wasn't taking the treeview's visible region offsets into
+	account, resulting in oddly-placed popups when used with a scrolled
+	textview.  so, use a scroller in this example to make sure it works.
+	thanks to jens wilke for the bug report.
+
 2004/07/07 21:08 (+0200) kaffeetisch
 
 	A t/PangoTypes.t
